--- a/client/templates.jade
+++ b/client/templates.jade
@@ -14,17 +14,17 @@ template(name='home')
         //             input(type=text placeholder='Search Twitter User')
         .ui.right.menu
             if currentUser
-                if hasReceivedTweets
-                    a.item.clear_my_docs
-                        i.remove.red.icon
-                        |Delete My Tweets
-                    a.item.view_my_tweets(class=viewMyTweetsClass)
-                        i.user.icon
-                        |My Tweets
-                else
-                    a.item.get_tweets
-                        i.cloud.green.download.icon
-                        |Get My Tweets
+                // if hasReceivedTweets
+                a.item.clear_my_docs
+                    i.remove.red.icon
+                    |Delete My Tweets
+                a.item.view_my_tweets(class=viewMyTweetsClass)
+                    i.user.icon
+                    |My Tweets
+                // else
+                a.item.get_tweets
+                    i.cloud.green.download.icon
+                    |Get My Tweets
             .ui.item
                 +loginButtons align='right'
     .ui.secondary.segment
@@ -73,13 +73,20 @@ template(name='view')
     .ui.header
         +markdown
             #{body}
-    .ui.segment
-        .ui.header #{this}
-    div Yaki Tags
-        each yaki_tags
-            .ui.label #{this}
-    div Alchemy Tags
-        each alchemy_tags
-            .ui.label #{this}
+    strong Tags:
+    each tags
+        .doc_tag.ui.label(class=doc_tag_class)
+            div #{this}
+    // div Yaki Tags
+    //     each yaki_tags
+    //         .ui.label #{this}
+    // div Alchemy Tags
+    //     each alchemy_tags
+    //         .ui.label #{this}
+    div Imported #{when}
+    div Tweeted at #{tweet_created_at}
     div
+        if is_author
+            .ui.icon.button.delete_tweet
+                i.remove.red.icon
         .ui.button.tweetViewAuthorButton(class=authorButtonClass) Author: #{screen_name}
