clean up formatting

--- a/client/styles.styl
+++ b/client/styles.styl
@@ -6,7 +6,7 @@
 //     padding  1em !important
 
 body
-    background grey !important
+    // background grey !important
     // height auto !important
 
 .body
