--- a/client/templates.jade
+++ b/client/templates.jade
@@ -5,88 +5,86 @@ body
     +home
 
 template(name='home')
-    #facetnav.ui.menu
+    #facetnav.ui.stackable.menu
         .ui.header.item Bubl
         .ui.item #{user_counter} users #{doc_counter} docs
         // if currentUser
         //     .ui.item
         //         .ui.input.authorName
         //             input(type=text placeholder='Search Twitter User')
-        .ui.right.menu
-            if currentUser
-                // if hasReceivedTweets
-                a.item.clear_my_docs
-                    i.remove.red.icon
-                    |Delete My Tweets
-                a.item.view_my_tweets(class=viewMyTweetsClass)
-                    i.user.icon
-                    |My Tweets
-                // else
-                a.item.get_tweets
-                    i.cloud.green.download.icon
-                    |Get My Tweets
-            .ui.item
-                +loginButtons align='right'
-    .ui.secondary.segment
-        .ui.center.aligned.header Filters
-        .ui.segments
-            // if $.Session.get 'author_filter'
-            //     .ui.center.aligned.segment
-            //         .ui.center.aligned.header Author
-            //         .ui.blue.button.authorFilterButton
-            //             |{{$.Session.get 'author_filter'}}
-            .ui.center.aligned.segment.globalcloud
-                .ui.center.aligned.header Authors
-                if selected_screen_names
-                    #clear_screen_names.ui.circular.grey.icon.button
-                        i.remove.icon
-                each selected_screen_names
-                    .unselect_screen_name.ui.large.compact.grey.button
-                        i.minus.icon
-                        |#{this}
-                each global_screen_names
-                    .select_screen_name.ui.large.compact.button
-                        i.user.icon
-                        |#{this.text}
-                        small #{this.count}
-            .ui.center.aligned.segment.globalcloud
-                .ui.center.aligned.header Tags
-                if selected_tags
-                    #clear_tags.ui.circular.grey.icon.button
-                        i.remove.icon
-                each selected_tags
-                    .unselect_tag.ui.large.compact.grey.button
-                        i.minus.icon
-                        |#{this}
-                each global_tags
-                    .select_tag.ui.large.compact.button
-                        |#{this.text}
-                        small #{this.count}
+        if currentUser
+            // if hasReceivedTweets
+            a.item.clear_my_docs
+                i.remove.red.icon
+                |Delete My Tweets
+            a.item.view_my_tweets(class=viewMyTweetsClass)
+                i.user.icon
+                |My Tweets
+            // else
+            a.item.get_tweets
+                i.cloud.green.download.icon
+                |Get My Tweets
+        .ui.item
+            +loginButtons align='right'
+    // if $.Session.get 'author_filter'
+    //     .ui.center.aligned.segment
+    //         .ui.center.aligned.header Author
+    //         .ui.blue.button.authorFilterButton
+    //             |{{$.Session.get 'author_filter'}}
+    .ui.center.aligned.segment.globalcloud
+        .ui.center.aligned.header Tags
+        if selected_tags
+            #clear_tags.ui.circular.grey.icon.button
+                i.remove.icon
+        each selected_tags
+            .unselect_tag.ui.large.compact.grey.button
+                i.minus.icon
+                |#{this}
+        each global_tags
+            .select_tag.ui.compact.button(class=cloud_tag_class)
+                |#{this.text}
+                small #{this.count}
+        .ui.center.aligned.header Authors
+        if selected_screen_names
+            #clear_screen_names.ui.circular.grey.icon.button
+                i.remove.icon
+        each selected_screen_names
+            .unselect_screen_name.ui.large.compact.grey.button
+                i.minus.icon
+                |#{this}
+        each global_screen_names
+            .select_screen_name.ui.large.compact.button
+                i.user.icon
+                |#{this.text}
+                small #{this.count}
     .ui.container
-        .ui.secondary.segment
+        .ui.cards
             each docs
-                .ui.center.aligned.segment
+                .ui.card
                     +view
 
 
 template(name='view')
-    .ui.header
-        +markdown
-            #{body}
-    strong Tags:
-    each bubl_tags
-        .doc_tag.ui.label(class=doc_tag_class)
-            div #{this}
+    .content
+        .ui.header
+            +markdown
+                #{body}
+    .content
+        strong Tags:
+        each bubl_tags
+            .doc_tag.ui.compact.button(class=doc_tag_class)
+                div #{this}
     // div Yaki Tags
     //     each yaki_tags
     //         .ui.label #{this}
     // div Alchemy Tags
     //     each alchemy_tags
     //         .ui.label #{this}
-    div Imported #{when}
-    div Tweeted at #{tweet_created_at}
-    div
-        if is_author
-            .ui.icon.button.delete_tweet
-                i.remove.red.icon
-        .ui.button.tweetViewAuthorButton(class=authorButtonClass) Author: #{screen_name}
+    .content
+        div Imported #{when}
+        div Tweeted at #{tweet_created_at}
+        div
+            if is_author
+                .ui.icon.button.delete_tweet
+                    i.remove.red.icon
+            .ui.button.tweetViewAuthorButton(class=authorButtonClass) Author: #{screen_name}
