--- a/client/bubl_templates.jade
+++ b/client/bubl_templates.jade
@@ -12,18 +12,18 @@ template(name='home')
         //     .ui.item
         //         .ui.input.authorName
         //             input(type=text placeholder='Search Twitter User')
-        if currentUser
-            // if hasReceivedTweets
-            a.item.clear_my_docs
-                i.remove.red.icon
-                |Delete My Tweets
-            a.item.view_my_tweets(class=viewMyTweetsClass)
-                i.user.icon
-                |My Tweets
-            // else
-            a.item.get_tweets
-                i.cloud.green.download.icon
-                |Get My Tweets
+        // if currentUser
+        //     // if hasReceivedTweets
+        //     a.item.clear_my_docs
+        //         i.remove.red.icon
+        //         |Delete My Tweets
+        //     a.item.view_my_tweets(class=viewMyTweetsClass)
+        //         i.user.icon
+        //         |My Tweets
+        //     // else
+        //     a.item.get_tweets
+        //         i.cloud.green.download.icon
+        //         |Get My Tweets
         .ui.item
             +loginButtons align='right'
     // if $.Session.get 'author_filter'
@@ -88,3 +88,6 @@ template(name='view')
                 .ui.icon.button.delete_tweet
                     i.remove.red.icon
             .ui.button.tweetViewAuthorButton(class=authorButtonClass) Author: #{screen_name}
+
+template(name='bubbleChart')
+    .bubbleChart
