--- a/client/top_10.jade
+++ b/client/top_10.jade
@@ -4,5 +4,4 @@ template(name='top_10')
         h4.ui.header Tag Selection #{tag_selection}
         ul
             each top_10_list
-                li #{leader_username}
-                li #{leader_tag_count}
+                li #{leader_username} (#{leader_tag_count})
