--- a/client/bubl_templates.jade
+++ b/client/bubl_templates.jade
@@ -24,8 +24,8 @@ template(name='home')
             a.item.get_tweets
                 i.cloud.green.download.icon
                 // |Get My Tweets
-            a.item.generate_cloud
-                |gen
+            // a.item.generate_cloud
+            //     |gen
         .ui.item
             +loginButtons
     // if $.Session.get 'author_filter'
@@ -33,8 +33,10 @@ template(name='home')
     //         .ui.center.aligned.header Author
     //         .ui.blue.button.authorFilterButton
     //             |{{$.Session.get 'author_filter'}}
-    .ui.center.aligned.segment.container.globalcloud
-        .ui.center.aligned.header Tags
+    if currentUser
+        +my_tags
+    .ui.center.aligned.segment.globalcloud
+        .ui.center.aligned.header Global Tags
         if selected_tags
             #clear_tags.ui.circular.grey.icon.button
                 i.remove.icon
@@ -102,3 +104,10 @@ template(name='view')
 
 // template(name='bubbleChart')
 //     .bubbleChart
+
+
+template(name='my_tags')
+    .ui.segment
+        .ui.header My Tags
+            each my_tags
+                .ui.small.compact.button.my_tag(class=my_tag_class) #{this}
