--- a/client/bubl_templates.jade
+++ b/client/bubl_templates.jade
@@ -1,32 +1,37 @@
 head
     title Bubl
 
-body
-    +home
+template(name='layout')
+    +nav
+    +Template.dynamic template=main
 
-template(name='home')
-    #facetnav.ui.stackable.menu
-        .ui.header.item Bubl
+
+template(name='nav')
+    .ui.stackable.menu
+        a.ui.header.item(href='/') Bubl
         .ui.item #{user_counter} users #{doc_counter} docs
-        if currentUser
-            .ui.item
-                .ui.input
-                    input.authorName(type=text placeholder='Search Twitter User')
+        // if currentUser
+        //     .ui.item
+        //         .ui.input
+        //             input.authorName(type=text placeholder='Search Twitter User')
         if currentUser
             // if hasReceivedTweets
             a.item.clear_my_docs
                 i.remove.red.icon
                 |Delete
-            a.item.view_my_tweets(class=viewMyTweetsClass)
-                i.user.icon
-                | Mine
+            // a.item.view_my_tweets(class=viewMyTweetsClass)
+            //     i.user.icon
+            //     | Mine
                 // Shows home instead of user's own tweets
             // else
             a.item.get_tweets
                 i.cloud.green.download.icon
-                |Sync Tweets
-        .ui.item
-            +loginButtons
+                |Sync
+                i.twitter.icon
+            a.ui.item(href='/profile') Profile
+        +atNavButton
+
+template(name='home')
     // if $.Session.get 'author_filter'
     //     .ui.center.aligned.segment
     //         .ui.center.aligned.header Author
@@ -62,10 +67,10 @@ template(name='home')
         //         small #{this.count}
     .ui.container
         +top_10
-        // .ui.centered.aligned.cards
-            // each docs
-            //     .ui.card
-            //         +view
+        .ui.centered.aligned.cards
+            each docs
+                .ui.card
+                    +view
     
 
 template(name='view')
@@ -78,12 +83,12 @@ template(name='view')
         each tags
             .doc_tag.ui.compact.button(class=doc_tag_class)
                 div #{this}
-    // div Yaki Tags
-    //     each yaki_tags
-    //         .ui.label #{this}
-    // div Alchemy Tags
-    //     each alchemy_tags
-    //         .ui.label #{this}
+    div Yaki Tags
+        each yaki_tags
+            .ui.label #{this}
+    div Alchemy Tags
+        each alchemy_tags
+            .ui.label #{this}
     .content
         div Imported #{when}
         div Tweeted at #{tweet_created_when}
@@ -100,9 +105,6 @@ template(name='view')
                 .ui.icon.button.delete_tweet
                     i.remove.red.icon
             .ui.button.tweetViewAuthorButton(class=authorButtonClass) Author: #{username}
-
-// template(name='bubbleChart')
-//     .bubbleChart
 
 
 template(name='my_tags')
